# quantum-phase-estimation

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  hardware_qpe_t_gate_ibm_fez.json  hardware_qpe_t_gate_ibm_marrakesh.json  hardware_qpe_theta_0.2_ibm_fez.json  hardware_qpe_theta_0.2_ibm_marrakesh.json  hardware_t_gate_ibm_fez_job_id.json  hardware_t_gate_ibm_marrakesh_job_id.json  hardware_theta_0.2_ibm_fez_job_id.json  hardware_theta_0.2_ibm_marrakesh_job_id.json
notebooks/: 01_qpe_qiskit.ipynb  01_theory.ipynb  02_qpe_qiskit.ipynb  03_hardware.ipynb  04_hhl.ipynb
src/qpe/: __init__.py  analysis.py  arithmetic.py  backends.py  circuit.py  core.py  hhl.py  lock.py  main.py  qft.py  runs.py
tests/: test_arithmetic.py  test_hhl.py  test_qpe.py
