[project]
name = "quantum-phase-estimation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pennylane>=0.45.1",
    "pylatexenc>=2.10",
    "qiskit>=2.5.0",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.47.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
