[project]
name = "qpe"
version = "0.1.0"
description = "Quantum Phase Estimation in Qiskit, and its use as a subroutine inside HHL"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "qiskit>=2.5.0,<3",
    "qiskit-aer>=0.17.2,<0.18",
    "qiskit-ibm-runtime>=0.48.0,<0.49",
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "pylatexenc>=2.10",       # required by qiskit's circuit.draw("mpl")
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nbmake>=1.5",
    "jupyterlab>=4.2",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qpe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
